--- a/notion-flaticon-credit.html
+++ b/notion-flaticon-credit.html
@@ -5,7 +5,7 @@
 <style>
 body {
    font-family: monospace;
-    font-size: xx-large;
+    font-size: small;
     color: #626262;
     padding: 5px;
     border: 1px solid #ececec;
