--- a/notion-flaticon-credit.html
+++ b/notion-flaticon-credit.html
@@ -3,6 +3,11 @@
 <head>
 <title>Flaticon Credit for Notion</title>
 <style>
+	
+html, body {height:100%;}
+html {display:table; width:100%;}
+body {display:table-cell; text-align:center; vertical-align:middle;}
+
 body {
    font-family: monospace;
     font-size: 15px;
